--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <h2 class="seccion-titulo texto-negro">Mis proyectos</h2>
           <h3 class="seccion-descripcion">Estos son algunos proyectos que he creado recientemente</h3>
           <!-- Galeria de proyectos -->
-           <div class="container">
+           <div class="container text-center proyectos-contenedor">
             <div class="row">
               <div class="col-12 col-md-6 col-lg-4">
                 <div class="proyecto">
@@ -132,9 +132,10 @@
                   <div class="overlay">
                     <p>Proyecto 1</p>
                     <div class="iconos-contenedor">
-                      <a href="">
-                        
+                      <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                        <i class="bi bi-github"></i>
                       </a>
+                      
                     </div>
                   </div>
                 </div>
