Se añade la sección articulos, refiriendo articulos externos a la pagina

--- a/index.html
+++ b/index.html
@@ -239,6 +239,49 @@
            
          </section>
 
+         <!-- Articulos -->
+          <section class="articulos justify-content-start">
+            <h2 class="seccion-titulo texto-negro">Artículos</h2>
+            <div class="card">
+              <div class="card-header">
+                Más recientes
+              </div>
+              <ul class="list-group list-group-flush">
+
+                <a href="https://www.xataka.com/aplicaciones/cursor-ai-nuevo-chatgpt-desarrolladores-cuando-programar-tab-tab-tab" target="_blank" rel="noopener noreferrer">
+                  <li class="list-group-item">Cursor AI es el nuevo ChatGPT de los desarrolladores: cuando programar es "tab-tab-tab"</li>
+                </a>
+
+                <a href="https://www.xataka.com/basics/blackbox-que-que-herramientas-ofrece-esta-inteligencia-artificial-que-te-ayuda-a-programar-completando-codigo" target="_blank" rel="noopener noreferrer">
+                  <li class="list-group-item">Blackbox AI: qué es y qué herramientas ofrece esta inteligencia artificial que te ayuda a programar completando código</li>
+                </a>
+
+                <a href="https://www.xataka.com/aplicaciones/estos-dos-lenguajes-decada-1950-siguen-haciendo-historia-vuelven-a-estar-populares-mundo" target="_blank" rel="noopener noreferrer">
+                  <li class="list-group-item">Dos lenguajes de programación de la década de 1950 siguen haciendo historia: vuelven a estar entre los más populares del mundo</li>
+                </a>
+
+                <a href="https://www.xataka.com/empresas-y-economia/quieres-salario-alto-hay-eleccion-critica-tu-carrera-profesional-que-lenguaje-programacion-dominas" target="_blank" rel="noopener noreferrer">
+                  <li class="list-group-item">Si quieres un salario alto, hay una elección crítica en tu carrera profesional: qué lenguaje de programación dominas</li>
+                </a>
+
+                <a href="https://www.xataka.com/aplicaciones/python-rey-lenguajes-programacion-viejos-rockeros-fortran-cobol-siguen-dando-guerra" target="_blank" rel="noopener noreferrer">
+                  <li class="list-group-item">Python es el rey de los lenguajes de programación. Pero los viejos rockeros (Fortran, COBOL) siguen dando guerra</li>
+                </a>
+
+                <a href="https://www.xataka.com/robotica-e-ia/github-copilot-tiene-competencia-meta-acaba-presentar-code-llama-nuevo-aliado-para-programadores" target="_blank" rel="noopener noreferrer">
+                  <li class="list-group-item">GitHub Copilot tiene más competencia: Meta acaba de presentar Code Llama, un nuevo aliado para los programadores</li>
+                </a>
+
+              </ul>
+            </div>
+            <a href="https://www.freecodecamp.org/espanol/news" target="_blank" rel="noopener noreferrer">
+              <button type="button" class="btn btn-info">
+                Ver más articulos
+                <i class="bi bi-arrow-right-circle-fill"></i>
+              </button>
+             </a>
+
+          </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
