Se editan los enlaces de los articulos para referenciar otra pagina externa

--- a/index.html
+++ b/index.html
@@ -248,28 +248,28 @@
               </div>
               <ul class="list-group list-group-flush">
 
-                <a href="https://www.xataka.com/aplicaciones/cursor-ai-nuevo-chatgpt-desarrolladores-cuando-programar-tab-tab-tab" target="_blank" rel="noopener noreferrer">
-                  <li class="list-group-item">Cursor AI es el nuevo ChatGPT de los desarrolladores: cuando programar es "tab-tab-tab"</li>
+                <a href="https://www.freecodecamp.org/espanol/news/como-crear-una-aplicacion-full-stack-con-next-js-13-y-firebase/" target="_blank" rel="noopener noreferrer">
+                  <li class="list-group-item">Cómo crear una aplicación Fullstack con Next.js 13 y Firebase</li>
                 </a>
 
-                <a href="https://www.xataka.com/basics/blackbox-que-que-herramientas-ofrece-esta-inteligencia-artificial-que-te-ayuda-a-programar-completando-codigo" target="_blank" rel="noopener noreferrer">
-                  <li class="list-group-item">Blackbox AI: qué es y qué herramientas ofrece esta inteligencia artificial que te ayuda a programar completando código</li>
+                <a href="https://www.freecodecamp.org/espanol/news/jorge-baumann-dominando-el-frontend-con-vue-js-s3-ep-1/" target="_blank" rel="noopener noreferrer">
+                  <li class="list-group-item">Jorge Baumann: Dominando el Frontend con Vue.js | S3 Ep. 1</li>
                 </a>
 
-                <a href="https://www.xataka.com/aplicaciones/estos-dos-lenguajes-decada-1950-siguen-haciendo-historia-vuelven-a-estar-populares-mundo" target="_blank" rel="noopener noreferrer">
-                  <li class="list-group-item">Dos lenguajes de programación de la década de 1950 siguen haciendo historia: vuelven a estar entre los más populares del mundo</li>
+                <a href="https://www.freecodecamp.org/espanol/news/no-utilices-el-sistema-ruby-de-mac-en-su-lugar-utiliza-esto/" target="_blank" rel="noopener noreferrer">
+                  <li class="list-group-item">No utilices el sistema Ruby de Mac: En su lugar utiliza esto</li>
                 </a>
 
-                <a href="https://www.xataka.com/empresas-y-economia/quieres-salario-alto-hay-eleccion-critica-tu-carrera-profesional-que-lenguaje-programacion-dominas" target="_blank" rel="noopener noreferrer">
-                  <li class="list-group-item">Si quieres un salario alto, hay una elección crítica en tu carrera profesional: qué lenguaje de programación dominas</li>
+                <a href="https://www.freecodecamp.org/espanol/news/como-recuperar-datos-en-react-hoja-de-trucos-ejemplos/" target="_blank" rel="noopener noreferrer">
+                  <li class="list-group-item">Cómo recuperar datos en React: hoja de trucos + ejemplos</li>
                 </a>
 
-                <a href="https://www.xataka.com/aplicaciones/python-rey-lenguajes-programacion-viejos-rockeros-fortran-cobol-siguen-dando-guerra" target="_blank" rel="noopener noreferrer">
-                  <li class="list-group-item">Python es el rey de los lenguajes de programación. Pero los viejos rockeros (Fortran, COBOL) siguen dando guerra</li>
+                <a href="https://www.freecodecamp.org/espanol/news/aprende-c-sharp-para-unity-curso-desde-cero/" target="_blank" rel="noopener noreferrer">
+                  <li class="list-group-item">Aprende C# para Unity - Curso desde cero</li>
                 </a>
 
-                <a href="https://www.xataka.com/robotica-e-ia/github-copilot-tiene-competencia-meta-acaba-presentar-code-llama-nuevo-aliado-para-programadores" target="_blank" rel="noopener noreferrer">
-                  <li class="list-group-item">GitHub Copilot tiene más competencia: Meta acaba de presentar Code Llama, un nuevo aliado para los programadores</li>
+                <a href="https://www.freecodecamp.org/espanol/news/como-acceder-a-las-propiedades-de-un-arreglo-de-objetos-en-javascript/" target="_blank" rel="noopener noreferrer">
+                  <li class="list-group-item">Cómo acceder a las propiedades de un arreglo de objetos en JavaScript</li>
                 </a>
 
               </ul>
