--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Bootstrap page</title>
+
+    <!-- .CSS -->
+    <link rel="stylesheet" href="./styles.css">
+
+    <!-- Icono de la paguina -->
     <link rel="shortcut icon" href="./imagenes/icono-blanco.svg" type="image/x-icon"> 
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <link rel="stylesheet" href="./styles.css">
-
+        <!-- Fuentes de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 
     <style>
     
@@ -283,6 +289,66 @@
 
           </section>
     
+        <!-- Testimonios -->
+         <section class="testimonios seccion-clara">
+          <h2 class="seccion-titulo">Testimonios</h2>
+          <h3 class="seccion-descripcion">Estos son algunos testimonio de mis clientes</h3>
+
+          <!-- Carrusel -->
+          <div id="testimonios-carrusel" class="carousel slide carousel-dark">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#testimonios-carrusel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#testimonios-carrusel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#testimonios-carrusel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <!-- Cliente 1 -->
+              <div class="carousel-item active">
+                <div class="container">
+                  <img class="testimonio-imagen rounded-circle" src="imagenes/cliente1.svg" alt="foto de Gabriel">
+                  <p class="testimonio-texto">"Contratar a Santiago Forero para mi página web fue una excelente decisión. La calidad del diseño y la atención al cliente fueron excepcionales. ¡Mis ventas han aumentado desde que lancé la nueva web! Totalmente recomendados."</p>
+                  <div class="testimonio-info">
+                    <p class="cliente">Gabriel Pérez</p>
+                    <p class="cargo">Gerente de E-commerce</p>
+                  </div>
+                </div>
+
+              </div>
+              <div class="carousel-item">
+                <!-- Cliente 2 -->
+                <div class="container">
+                  <img class="testimonio-imagen rounded-circle" src="imagenes/cliente2.svg" alt="foto de Ana López">
+                  <p class="testimonio-texto">"Estoy encantada con la página web que [Tu Nombre o Nombre de tu Empresa] creó para mi negocio. El diseño es moderno y funcional, y he recibido muchos elogios de mis clientes. ¡No podría estar más feliz!"</p>
+                  <div class="testimonio-info">
+                    <p class="cliente"> Ana López</p>
+                    <p class="cargo">Dueña de Boutique</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <!-- Cliente 3 -->
+                <div class="container">
+                  <img class="testimonio-imagen rounded-circle" src="imagenes/cliente3.svg" alt="foto de Carlos Martínez">
+                  <p class="testimonio-texto">"El equipo de [Tu Nombre o Nombre de tu Empresa] hizo un trabajo increíble con mi sitio web. La comunicación fue fluida y el resultado final superó mis expectativas. ¡Definitivamente volveré a trabajar con ellos!"</p>
+                  <div class="testimonio-info">
+                    <p class="cliente">Carlos Martínez</p>
+                    <p class="cargo">Fundador de Servicios Técnicos</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#testimonios-carrusel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#testimonios-carrusel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Siguiente</span>
+            </button>
+          </div>
+
+         </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
