--- a/index.html
+++ b/index.html
@@ -349,6 +349,31 @@
 
          </section>
 
+         <!-- Contacto -->
+          <section class="contacto seccion-oscura">
+            <div class="container">
+              <div class="container text-center d-flex justify-content-evenly rectangulo">
+                <div class="row">
+                  <div class="col-12 col-md-4 seccion-titulo">
+                    ¡Hablemos!
+                  </div>
+                  <div class="col-12 col-md-4 descripcion">
+                    Contactame para iniciar tu proyecto de desarrollo web y hacer que tu idea se vuelva realidad
+                  </div>
+                  <div class="col-12 col-md-4">
+                    <a href="mailto:dnsoweb@micorreo.com">
+                      <button type="button">
+                        Contacto
+                        <i class="bi bi-envelope-check-fill"></i>
+                      </button>
+                    </a>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
