Se agrega footer con estilos

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <!-- Fuentes de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
 
     <style>
     
@@ -349,7 +348,7 @@
 
          </section>
 
-         <!-- Contacto -->
+        <!-- Contacto -->
           <section class="contacto seccion-oscura">
             <div class="container">
               <div class="container text-center d-flex justify-content-evenly rectangulo">
@@ -373,6 +372,32 @@
               </div>
             </div>
           </section>
+
+        <!-- Footer -->
+          <footer class="seccion-oscura d-flex flex-column justify-items-center justify-content-center">
+            <img class="footer-logo" src="imagenes/icono-blanco.svg" alt="Logo del portafolio">
+            <p class="footer-texto text-center">Aprendo y creo todos los días.<br>Creemos un proyecto juntos.</p>
+            <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+              
+              <a href="https://github.com/DNSO0" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-github"></i>
+              </a>
+              <a href="https://x.com/?lang=es" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-twitter-x"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/santiago-forero-mendez-022065320/" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-linkedin"></i>
+              </a>
+              <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-instagram"></i>
+              </a>
+              <a href="mailto:dnsoweb@micorreo.com" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-envelope"></i>
+              </a>
+            </div>
+
+            <div class="derechos-de-autor">Creado por Santiago Forero (2024) &#160; </div>
+          </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
