Se añade proyectos reales, fotografia personal y formulario de contacto

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <!-- Seccion Hero -->
        <section class="hero align-items-stretch">
         <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-          <img class="hero-imagen-perfil rounded-circle" src="imagenes/desarrollador-ejemplo.svg" alt="Foto de Santiago Forero">
+          <img class="hero-imagen-perfil rounded-circle" src="imagenes/alto-del-granadillo.jpg" alt="Foto de Santiago Forero">
           <h1>Hola, soy Santiago Forero</h1>
           <h2>Desarrollo sotios web con distintas tecnoligías</h2>
         </div>
@@ -90,7 +90,7 @@
                <div class="columna col-12 col-md-4">
                   <i class="bi bi-laptop"></i>
                   <p class="experiencia-titulo">Desarollo Web</p>
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab culpa eius maxime? Fuga enim tempore quisquam recusandae nemo vel.</p>
+                  <p>"Transforma tu visión en realidad con nuestro servicio de desarrollo web. Creamos sitios personalizados y funcionales que se adaptan a las necesidades de tu negocio, asegurando una experiencia de usuario excepcional y un diseño atractivo."</p>
                   <div class="badges-contenedor">
                     <span class="badge text-bg-primary">HTML</span>
                     <span class="badge text-bg-primary">CSS</span>
@@ -102,7 +102,7 @@
                <div class="columna col-12 col-md-4">
                 <i class="bi bi-laptop"></i>
                 <p class="experiencia-articulos">Articulos</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab culpa eius maxime? Fuga enim tempore quisquam recusandae nemo vel.</p>
+                <p>"Descubre una variedad de artículos informativos que abordan temas relevantes y tendencias del sector. Nuestro contenido está diseñado para mantenerte actualizado y ofrecerte insights valiosos que puedes aplicar en tu día a día."</p>
                 <div class="badges-contenedor">
                   <span class="badge text-bg-primary">Escribir</span>
                   <span class="badge text-bg-primary">Editar</span>
@@ -113,7 +113,7 @@
                 <div class="columna col-12 col-md-4">
                   <i class="bi bi-laptop"></i>
                   <p class="experiencia-estudiante">Estudiante</p>
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab culpa eius maxime? Fuga enim tempore quisquam recusandae nemo vel.</p>
+                  <p>"Como estudiante apasionado, me dedico a aprender y crecer en el mundo del desarrollo web. Aquí comparto mis proyectos, experiencias y conocimientos adquiridos, con el objetivo de inspirar a otros y seguir mejorando cada día."</p>
                   <div class="badges-contenedor">
                     <span class="badge text-bg-primary">Desarrollo Web</span>
                     <span class="badge text-bg-primary">Front-end</span>
@@ -133,15 +133,15 @@
             <div class="row">
               <!-- Proyecto 1 -->
               <div class="col-12 col-md-6 col-lg-4">
-                <div class="proyecto">
-                  <img src="imagenes/proyecto1.png" alt="Proyecto 1">
-                  <div class="overlay">
-                    <p>Proyecto 1</p>
+                <div class="proyecto">                 
+                  <img src="imagenes/sassEcoStore.jpg" alt="Proyecto 1">                 
+                <div class="overlay">
+                    <p>Proyecto Sass</p>
                     <div class="iconos-contenedor">
-                      <a href="https://github.com/DNSO0" target="_blank" rel="noopener noreferrer">
+                      <a href="https://github.com/DNSO0/Eco-Store-platzi" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-github"></i>                        
                       </a>
-                      <a href="https://github.com/DNSO0" target="_blank" rel="noopener noreferrer">
+                      <a href="https://github.com/DNSO0/Eco-Store-platzi" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-laptop"></i>
                       </a>
                     </div>
@@ -151,14 +151,14 @@
                <!-- Proyecto 2 -->
                <div class="col-12 col-md-6 col-lg-4">
                 <div class="proyecto">
-                  <img src="imagenes/proyecto2.png" alt="Proyecto 1">
+                  <img src="imagenes/EncriptadorAlura.jpg" alt="Proyecto 1">
                   <div class="overlay">
                     <p>Proyecto 2</p>
                     <div class="iconos-contenedor">
-                      <a href="https://github.com/DNSO0" target="_blank" rel="noopener noreferrer">
+                      <a href="https://github.com/DNSO0/Encriptador-de-texto" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-github"></i>                        
                       </a>
-                      <a href="https://github.com/DNSO0" target="_blank" rel="noopener noreferrer">
+                      <a href="https://dnso0.github.io/Encriptador-de-texto/" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-laptop"></i>
                       </a>
                     </div>
@@ -168,14 +168,14 @@
                <!-- Proyecto 3 -->
                <div class="col-12 col-md-6 col-lg-4">
                 <div class="proyecto">
-                  <img src="imagenes/proyecto3.png" alt="Proyecto 1">
+                  <img src="imagenes/BatataBeat.jpg" alt="Proyecto 1">
                   <div class="overlay">
                     <p>Proyecto 3</p>
                     <div class="iconos-contenedor">
-                      <a href="https://github.com/DNSO0" target="_blank" rel="noopener noreferrer">
+                      <a href="https://github.com/DNSO0/PotatoBit" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-github"></i>                        
                       </a>
-                      <a href="https://github.com/DNSO0" target="_blank" rel="noopener noreferrer">
+                      <a href="https://github.com/DNSO0/PotatoBit" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-laptop"></i>
                       </a>
                     </div>
@@ -185,14 +185,14 @@
                <!-- Proyecto 4 -->
                <div class="col-12 col-md-6 col-lg-4">
                 <div class="proyecto">
-                  <img src="imagenes/proyecto4.png" alt="Proyecto 1">
+                  <img src="imagenes/juegoJS.jpg" alt="Proyecto 1">
                   <div class="overlay">
                     <p>Proyecto 4</p>
                     <div class="iconos-contenedor">
-                      <a href="https://github.com/DNSO0" target="_blank" rel="noopener noreferrer">
+                      <a href="https://github.com/DNSO0/juegoBombasJS" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-github"></i>                        
                       </a>
-                      <a href="https://github.com/DNSO0" target="_blank" rel="noopener noreferrer">
+                      <a href="https://github.com/DNSO0/juegoBombasJS" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-laptop"></i>
                       </a>
                     </div>
@@ -202,14 +202,14 @@
                <!-- Proyecto 5 -->
                <div class="col-12 col-md-6 col-lg-4">
                 <div class="proyecto">
-                  <img src="imagenes/proyecto5.png" alt="Proyecto 1">
+                  <img src="imagenes/googleClone.jpg" alt="Proyecto 1">
                   <div class="overlay">
                     <p>Proyecto 5</p>
                     <div class="iconos-contenedor">
-                      <a href="https://github.com/DNSO0" target="_blank" rel="noopener noreferrer">
+                      <a href="https://github.com/DNSO0/googleClone" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-github"></i>                        
                       </a>
-                      <a href="https://github.com/DNSO0" target="_blank" rel="noopener noreferrer">
+                      <a href="https://github.com/DNSO0/googleClone" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-laptop"></i>
                       </a>
                     </div>
@@ -219,14 +219,14 @@
                <!-- Proyecto 6 -->
                <div class="col-12 col-md-6 col-lg-4">
                 <div class="proyecto">
-                  <img src="imagenes/proyecto6.png" alt="Proyecto 1">
+                  <img src="imagenes/Captura de pantalla 2024-09-30 212838.jpg" alt="Proyecto 1">
                   <div class="overlay">
                     <p>Proyecto 6</p>
                     <div class="iconos-contenedor">
-                      <a href="https://github.com/DNSO0" target="_blank" rel="noopener noreferrer">
+                      <a href="https://github.com/DNSO0/Animacion-Cohete" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-github"></i>                        
                       </a>
-                      <a href="https://github.com/DNSO0" target="_blank" rel="noopener noreferrer">
+                      <a href="https://github.com/DNSO0/Animacion-Cohete" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-laptop"></i>
                       </a>
                     </div>
@@ -353,13 +353,20 @@
             <div class="container">
               <div class="container text-center d-flex justify-content-evenly rectangulo">
                 <div class="row">
-                  <div class="col-12 col-md-4 seccion-titulo">
+                  <div class="col-12 col-md-3 seccion-titulo">
                     ¡Hablemos!
                   </div>
-                  <div class="col-12 col-md-4 descripcion">
+                  <div class="col-12 col-md-3 descripcion">
                     Contactame para iniciar tu proyecto de desarrollo web y hacer que tu idea se vuelva realidad
                   </div>
-                  <div class="col-12 col-md-4">
+                  <div class="col-12 col-md-6">
+                    <form class="contacto__formulario">
+                      <input class="contacto__campo" type="text" placeholder="Nombre">
+                      <input class="contacto__campo" type="email" placeholder="Correo Electrónico">
+                      <input class="contacto__campo" type="text" placeholder="Asunto">
+                      <textarea class="contacto__campo contacto__campo--textarea" placeholder="Mensaje"></textarea>
+                     
+                  </form>
                     <a href="mailto:dnsoweb@micorreo.com">
                       <button type="button">
                         Contacto
